[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/DialogueUI.gd" id="1_dialogue_ui_script"]

[node name="DialogueUI" type="CanvasLayer" groups=["dialogue_ui"]]
script = ExtResource("1_dialogue_ui_script")

[node name="Root" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -260.0
offset_right = -40.0
offset_bottom = -20.0

[node name="Panel" type="Panel" parent="Root"]
layout_mode = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Root/Panel"]
layout_mode = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0

[node name="SpeakerLabel" type="Label" parent="Root/Panel/VBoxContainer"]
layout_mode = 2
text = "Speaker"

[node name="DialogueText" type="RichTextLabel" parent="Root/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = false
fit_content_height = true
autowrap_mode = 2
text = "Dialogue goes here."

[node name="ChoicesContainer" type="VBoxContainer" parent="Root/Panel/VBoxContainer"]
layout_mode = 2
visible = false
size_flags_vertical = 1

[node name="ContinueButton" type="Button" parent="Root/Panel/VBoxContainer"]
layout_mode = 2
text = "Continue"

[connection signal="pressed" from="Root/Panel/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
